# rules_javascript

./: .bazelrc  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .yarnrc.yml  BUILD.bazel  DEVELOPING.md  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  eslint.config.mjs  package.json
.github/: configure-bazel
angular/: BUILD.bazel  rules.bzl
angular/js-compiler/: BUILD.bazel
angular/js-compiler/src/: main.ts  worker.ts
bazel/: BUILD.bazel
bazel/runfiles/: BUILD.bazel  tsconfig.json
bazel/runfiles/src/: index.ts
bazel/worker/: BUILD.bazel
bazel/worker/src/: protocol.ts
ci/: assert-secretless-runner.sh  gitlab-parity.json  verify-gitlab-parity.mjs
commonjs/: BUILD.bazel  npm_plugin.bzl  providers.bzl  rules.bzl  workspace.bzl
docs/: angular.md  commonjs.md  eslint.md  file.md  javascript.md  jest.md  nodejs.md  npm.md  openapi.md  prettier.md  protobuf.md  protobufjs.md  rollup.md  rules.md  ts-proto.md  typescript-eslint.md  typescript.md  webpack.md
eslint/linter/: BUILD.bazel
eslint/linter/src/: import.js  main.ts
file/digest/: BUILD.bazel
file/digest/src/: main.ts
nodejs/: BUILD.bazel  create-fs-gen.sh  create-shim.sh  extensions.bzl  install-runner.sh.tpl  nodejs.BUILD.bazel.tpl  nodejs.MODULE.bazel  nodejs.bzl  npm.bzl  npm_plugin.bzl  repl-runner.sh.tpl  repositories.bzl  rules.bzl  runner.sh.tpl  simple-runner.sh.tpl
nodejs/default/: nodejs.bzl
nodejs/doc/: BUILD.bazel  doc.md
nodejs/esm-linker/: BUILD.bazel
nodejs/esm-linker/src/: loader.ts  resolve.ts
nodejs/fs-linker/: BUILD.bazel  tsconfig.json
nodejs/fs-linker/src/: fs.ts  index.ts  package.ts
nodejs/module-details/: BUILD.bazel
nodejs/module-details/src/: module-details.ts
nodejs/module-linker/: BUILD.bazel
nodejs/module-linker/src/: index.ts  module.ts
nodejs/platform/: BUILD.bazel
nodejs/resolve/: BUILD.bazel
nodejs/resolve/src/: main.ts
nodejs/runfiles/: BUILD.bazel
nodejs/runfiles/src/: index.ts  stack.ts
nodejs/runtime/: BUILD.bazel
nodejs/test/: jest.config.js  tsconfig.json
nodejs/test/bazel/: MODULE.bazel
nodejs/test/bazel/binary/: BUILD.bazel
nodejs/test/bazel/binary-archive/: BUILD.bazel
nodejs/test/bazel/dep/: BUILD.bazel
nodejs/test/bazel/dep/other/: BUILD.bazel
nodejs/test/bazel/dep/process/: BUILD.bazel
nodejs/test/bazel/esm/: BUILD.bazel  main.js
nodejs/test/bazel/module-details/: BUILD.bazel  package.json
nodejs/test/bazel/modules-binary/: BUILD.bazel  package.json
nodejs/test/bazel/preload/: BUILD.bazel
nodejs/test/bazel/repl/: BUILD.bazel
nodejs/test/bazel/runfiles/: BUILD.bazel  main.js
nodejs/test/src/: binary-archive.spec.ts  binary.spec.ts  dep.spec.ts  esm.spec.ts  module-details.spec.ts  modules-binary.spec.ts  preload.spec.ts  repl.spec.ts  runfiles.spec.ts
nodejs/toolchains/: BUILD.bazel
nodejs/worker/: BUILD.bazel  tsconfig.json
nodejs/worker/src/: index.ts  protocol.ts  stream.ts
npm/yarn-resolve/: BUILD.bazel  tsconfig.json
npm/yarn-resolve/src/: bzl.ts  json.ts  main.ts  npm.ts  patch.ts  resolve.ts  yarn.ts
pkg/: BUILD.bazel  install-runner.sh.tpl  rules.bzl
pkg/install/: BUILD.bazel
pkg/install-manifest/: BUILD.bazel
pkg/install-manifest-gen/: BUILD.bazel
pkg/install-manifest-gen/src/: main.ts  worker.ts
pkg/install-manifest/src/: index.ts
pkg/install/src/: main.ts
pkg/manifest/: BUILD.bazel
pkg/manifest/src/: index.ts
pkg/runfiles-manifest/: BUILD.bazel
pkg/runfiles-manifest/src/: main.ts
pkg/sync/: BUILD.bazel
pkg/sync/src/: diff.ts  main.ts  tree.ts
playwright/: BUILD.bazel  browser.bzl  extensions.bzl  playwright-rules.bzl.tpl  playwright-tool.BUILD.bazel.tpl  playwright-toolchain.BUILD.bazel.tpl  playwright-toolchains.BUILD.bazel.tpl  playwright.BUILD.bazel.tpl  playwright.MODULE.bazel  playwright.bzl  providers.bzl  repositories.bzl  resolve.sh.tpl  rules.bzl  runner.sh.tpl  runtime.js  workspace.bzl
playwright/default/: BUILD.bazel  browsers.bzl  workspace.bzl
playwright/resolve/: BUILD.bazel
playwright/resolve/src/: browsers.ts  digest.ts  main.ts
playwright/resolve/src/playwright/: platform.ts  registry.ts
playwright/test/: BUILD.bazel
playwright/test/bazel/: MODULE.bazel
playwright/test/bazel/basic/: BUILD.bazel
playwright/test/bazel/browser/: BUILD.bazel  playwright.config.js
playwright/test/bazel/dep/: BUILD.bazel  example.spec.js
playwright/test/bazel/shard/: BUILD.bazel  example3.spec.js
playwright/test/src/: basic.spec.ts  browser.spec.ts  dep.spec.ts  shard.spec.ts
pnp/: BUILD.bazel  providers.bzl
pnp/compiler/: BUILD.bazel  rollup.config.js
pnp/compiler/src/: main.ts  manifest.ts  pnp.ts  worker.ts
prettier/format/: BUILD.bazel  tsconfig.json
prettier/format/src/: index.ts
test/: .yarnrc.yml  BUILD.bazel  browsers.json  npm.json  package.json  test.MODULE.bazel  test.bazelrc  workspace.bzl  workspace0.bzl  workspace1.bzl
test/npm-patches/: compat-fsevents-df0bf1.patch  compat-typescript-b5f058.patch
tools/bazel_/: BUILD.bazel  preset.bazelrc
tools/bazel_/preset/bazel_util+/bazelrc/: preset.bazelrc
tools/bazel_/preset/r_tools+/bazel/bazelrc/: preset.bazelrc
tools/doc/: BUILD.bazel  gen.sh  rules.bzl
tools/file/: file.MODULE.bazel  files.BUILD.bazel  files.bazel  files.bazelrc
tools/nodejs/: BUILD.bazel  install.sh
tools/npm/: BUILD.bazel  npm.MODULE.bazel  npm.bzl  npm.json  resolve.sh  workspace.bzl
tools/npm/npm-patches/: compat-resolve-c3c19d.patch  compat-typescript-5786d5.patch
tools/test/: BUILD.bazel  packages.sh  tests.bazelrc
ts-proto/: BUILD.bazel  aspects.bzl  rules.bzl
ts-proto/doc/: doc.md
ts-proto/test/: BUILD.bazel
ts-proto/test/bazel/: BUILD.bazel  MODULE.bazel  aspects.bzl  rules.bzl
ts-proto/test/bazel/basic/: BUILD.bazel
typescript-eslint/linter/: BUILD.bazel
typescript-eslint/linter/src/: import.d.ts  main.ts
typescript/config/: BUILD.bazel  rollup.config.js
typescript/config/src/: main.ts
util/argparse/: BUILD.bazel
util/argparse/src/: actions.ts
webpack/config/: BUILD.bazel  tsconfig.json
webpack/default/: BUILD.bazel
(+227 files in other folders)
