load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")

exports_files(
    ["yarn.lock"],
    visibility = ["//visibility:public"],  # tests
)

alias(
    name = "doc",
    actual = "//tools/doc:gen",
)

js_library(
    name = "eslint_config",
    srcs = [".eslintrc.js"],
    root = ":root",
    visibility = [":__subpackages__"],
)

alias(
    name = "format",
    actual = "//tools/lint:format",
)

alias(
    name = "lint",
    actual = "//tools/lint",
)

alias(
    name = "npm_resolve",
    actual = "//tools/npm:resolve",
)

js_library(
    name = "prettier_config",
    srcs = ["prettierrc.yaml"],
    root = ":root",
    visibility = [":__subpackages__"],
    deps = ["@npm//prettier-plugin-organize-imports:lib"],
)

alias(
    name = "refresh",
    actual = "//tools:refresh",
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/root",
    descriptors = ["package.json"],
    visibility = [":__subpackages__"],
)

test_suite(
    name = "test",
    tests = [
        "//angular:test",
        "//commonjs:test",
        "//javascript:test",
        "//jest:test",
        "//nodejs:test",
        "//npm:test",
        "//prettier:test",
        "//rollup:test",
        # "//ts-proto/test",
        "//typescript:test",
        "//webpack:test",
    ],
)
