module(name = "rules_javascript")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "080694bcfa6d75771e6b72e4bcb66edd9e40fbfe"

archive_override(
    module_name = "bazel_util",
    sha256 = "5e6ad7a1a0c4a9160139cdd639162924e285ba6b125291bbd4805c07f31d32b7",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# JavaScript

include("//nodejs:nodejs.MODULE.bazel")
include("//playwright:playwright.MODULE.bazel")
include("//test:test.MODULE.bazel")
include("//tools/npm:npm.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.2.0")

# Platform

bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf

bazel_dep(name = "rules_proto", version = "7.1.0")

# R Tools

bazel_dep(name = "r_tools", dev_dependency = True)

R_TOOLS_VERSION = "e7e53de9b0fd382501ad588815833dde24f58576"

archive_override(
    module_name = "r_tools",
    sha256 = "a1ca9273aaaaabed389e7854fac92b7838459e8d5b03706150fc22819d5d5be1",
    strip_prefix = "r-tools-%s" % R_TOOLS_VERSION,
    url = "https://github.com/redoapp/r-tools/archive/%s.tar.gz" % R_TOOLS_VERSION,
)

# Shell

bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    sha256 = "c69a83b7afefa03b21c370c2044c63c41800820f51680022604133a098e2c932",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Stardoc

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)
