module(name = "rules_javascript")

# Bazel

bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "c0dcf8fac981f06ca86d2840761b3703da3a525a"

archive_override(
    module_name = "bazel_util",
    integrity = "sha256-PoekS5Uks+78YYQpIREdHJGicuSB8umpaB25umDdVLk=",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# Git

include("//tools/git:git.MODULE.bazel")

# JavaScript

include("//nodejs:nodejs.MODULE.bazel")
include("//playwright:playwright.MODULE.bazel")
include("//test:test.MODULE.bazel")
include("//tools/npm:npm.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.2.0")

# Platform

bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf

bazel_dep(name = "rules_proto", version = "7.1.0")

# Redo Tech

bazel_dep(name = "r_tools", dev_dependency = True)

R_TOOLS_VERSION = "c3c2b65db7cd6d048798c1c8c2501ce706cf4c16"

archive_override(
    module_name = "r_tools",
    integrity = "sha256-lUQDylog5v+SVzgZDVRUY/QK0MGsKnGkEzjQ8RU8m3k=",
    strip_prefix = "r-tools-%s" % R_TOOLS_VERSION,
    url = "https://github.com/redoapp/r-tools/archive/%s.tar.gz" % R_TOOLS_VERSION,
)

# Shell

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    sha256 = "c69a83b7afefa03b21c370c2044c63c41800820f51680022604133a098e2c932",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Stardoc

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)
