workspace(name = "better_rules_javascript")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "d54e8a70ce90a24b921381cbe84fa0b88b22dc46"

http_archive(
    name = "bazel_skylib",
    sha256 = "7345a2c1b005aeead6dd402345a665cc514ae229100ff1e5e40f9939efd6856b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION],
)

# Python

RULES_PYTHON_VERSION = "1.3.0"

http_archive(
    name = "rules_python",
    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Go
GO_VERSION = "v0.59.0"

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "68af54cb97fbdee5e5e8fe8d210d15a518f9d62abfd71620c3eaff3b26a5ff86",
    url = "https://github.com/bazelbuild/rules_go/releases/download/%s/rules_go-%s.zip" % (GO_VERSION, GO_VERSION),
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.25.4")

# Pkg

RULES_PKG_VERSION = "1.2.0"

http_archive(
    name = "rules_pkg",
    sha256 = "b5c9184a23bb0bcff241981fd9d9e2a97638a1374c9953bb1808836ce711f990",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/%s/rules_pkg-%s.tar.gz" % (RULES_PKG_VERSION, RULES_PKG_VERSION),
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

# Protobuf

RULES_PROTO_VERSION = "7.1.0"

http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    strip_prefix = "rules_proto-%s" % RULES_PROTO_VERSION,
    url = "https://github.com/bazelbuild/rules_proto/releases/download/%s/rules_proto-%s.tar.gz" % (RULES_PROTO_VERSION, RULES_PROTO_VERSION),
)

# Rules license

RULES_LICENSE_VERSION = "5dfafe2ae7a38ede7480d342d7d770308bd64406"

http_archive(
    name = "rules_license",
    sha256 = "6a2534cd8374a00e1bb4a061f8d2a483ae182f7ce67849e27f5a149f5c4a9e19",
    strip_prefix = "rules_license-%s" % RULES_LICENSE_VERSION,
    url = "https://github.com/bazelbuild/rules_license/archive/%s.zip" % RULES_LICENSE_VERSION,
)

# Java

# JAVA_VERSION = "7cf3cefd652008d0a64a419c34c13bdca6c8f178"

# http_archive(
#     name = "rules_java",
#     sha256 = "bc81f1ba47ef5cc68ad32225c3d0e70b8c6f6077663835438da8d5733f917598",
#     strip_prefix = "rules_java-%s" % JAVA_VERSION,
#     urls = [
#         "https://github.com/bazelbuild/rules_java/archive/%s.zip" % JAVA_VERSION,
#     ],
# )

# load("@com_google_protobuf//bazel/private:proto_bazel_features.bzl", "proto_bazel_features")  # buildifier: disable=bzl-visibility
# proto_bazel_features(name = "proto_bazel_features")

# Stardoc

STARDOC_VERSION = "2ce2df8ff305cc6161206359ef0a424cea7df83c"

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "74dfbca5ec4ee54c1b4f977781619a8f4f7cab98f3bc26c98ef80d7386884a8a",
    strip_prefix = "stardoc-%s" % STARDOC_VERSION,
    url = "https://github.com/bazelbuild/stardoc/archive/%s.zip" % STARDOC_VERSION,
)

# Bazel Util

BAZEL_UTIL_VERSION = "6176db569992c21938caf01eb96343ce9fbd5e28"

http_archive(
    name = "bazel_util",
    sha256 = "c02c6017d16f7fd244a18cda307c882e2282efa7eb75a64d1ecb48bb80903a1d",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

load("@bazel_util//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

load("@bazel_util//file:workspace.bzl", "files")

# JavaScript

load("//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

files(
    name = "files",
    build = "@better_rules_javascript//tools/file:files.bazel",
    ignores = [
        ".git",
        ".yarn",
        "node_modules",
        "rules/.yarn",
    ],
    root_file = "//:WORKSPACE.bazel",
)

# NPM

load("//tools/npm:workspace.bzl", "npm_deps")

npm_deps()
