load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":rules.bzl", "nodejs", "nodejs_runtime", "nodejs_system_runtime")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//nodejs/doc:__subpackages__"],
)

exports_files(
    [
        "install-runner.sh.tpl",
        "modules-binary-runner.sh.tpl",
        "package-runner.sh.tpl",
        "repl-runner.sh.tpl",
        "simple-runner.sh.tpl",
        "runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

nodejs(
    name = "nodejs",
    options = ["--enable-source-maps"],
    runtime = ":nodejs_runtime",
    visibility = ["//visibility:public"],
)

nodejs_runtime(
    name = "nodejs_runtime",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "nodejs_type",
    visibility = ["//visibility:public"],
)

nodejs(
    name = "system_nodejs",
    options = ["--enable-source-maps"],
    runtime = ":system_nodejs_runtime",
    visibility = ["//visibility:public"],
)

nodejs_system_runtime(
    name = "system_nodejs_runtime",
    node = "node",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//javascript:bzl",
        "//pkg:bzl",
        "//third-party:repo_bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
        "@bazel_util//file:bzl",
        "@rules_pkg//pkg:bzl_srcs",
    ],
)

test_suite(
    name = "test",
    tests = ["//nodejs/test"],
    visibility = ["//:__subpackages__"],
)
