load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["install-runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//util:bzl",
        "@bazel_skylib//lib:shell",
        "@rules_pkg//pkg:bzl_srcs",
    ],
)
