load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs/package:lib",
        "//nodejs/fs-linker:lib",
        "//nodejs/worker:lib",
        "//util/json:lib",
        "@npm//@types/argparse:lib",
        "@npm//@types/node:lib",
        "@npm//argparse:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/angular-js-compiler",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
)
