load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compile_deps = ["@npm//eslint:lib"],
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/worker:lib",
        "@npm//@types/argparse:lib",
        "@npm//@types/eslint:lib",
        "@npm//@types/node:lib",
        "@npm//argparse:lib",
    ],
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/eslint-format",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)
