load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//nodejs:rules.bzl", "nodejs_binary")
load("//typescript:rules.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = [
        "@npm//@types/argparse:lib",
        "@npm//@types/node:lib",
        "@npm//argparse:lib",
        "@rules_javascript//bazel/worker:lib",
    ],
)

nodejs_binary(
    name = "bin",
    dep = ":lib",
    main = "src/main.js",
)

cjs_root(
    name = "root",
    package_name = "@rules-javascript/digest",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)
