load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//nodejs:rules.bzl", "nodejs_binary")
load("//typescript:rules.bzl", "ts_library")

cjs_root(
    name = "root",
    package_name = "@rules-javascript/yarn-resolve",
    descriptors = ["package.json"],
)

js_library(
    name = "config",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":config",
    root = ":root",
    deps = [
        "//util/cache:lib",
        "//util/json:lib",
        "//util/util:lib",
        "@npm//@types/argparse:lib",
        "@npm//@types/node:lib",
        "@npm//@yarnpkg/cli:lib",
        "@npm//@yarnpkg/core:lib",
        "@npm//@yarnpkg/fslib:lib",
        "@npm//@yarnpkg/plugin-npm:lib",
        "@npm//@yarnpkg/plugin-patch:lib",
        "@npm//argparse:lib",
    ],
)

nodejs_binary(
    name = "bin",
    dep = ":lib",
    main = "src/main.js",
    node = "//tools/nodejs",
    # node_options = ["--title=yarn-resolve"],
    visibility = ["//visibility:public"],
)
