load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

cjs_root(
    name = "root",
    package_name = "@rules-javascript/prettier-format",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//tools/typescript:tsconfig"],
)

js_library(
    name = "lib_js",
    srcs = glob([
        "src/**/*.js",
        "src/**/*.mjs",
    ]),
    root = ":root",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compile_deps = ["@npm//prettier:lib"],
    compiler = "@rules_javascript//typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    visibility = ["//visibility:public"],
    deps = [
        ":lib_js",
        "@npm//@types/argparse:lib",
        "@npm//@types/node:lib",
        "@npm//argparse:lib",
        "@rules_javascript//bazel/worker:lib",
    ],
)
