load("@bazel_util//bazelrc:rules.bzl", "bazelrc_gen")
load("@rules_shell_extra//shell:rules.bzl", "sh_binary")

bazelrc_gen(
    name = "bazelrc",
    path = "preset",
    visibility = ["//:__subpackages__"],
    deps = [
        "//typescript:bazelrc",
        "@r_tools//bazel/bazelrc:preset",
    ],
)

sh_binary(
    name = "refresh",
    data = [
        "//tools/test:bazelrc",
        "@files//packages:bazelrc",
    ],
    main = "refresh.sh",
    visibility = ["//:__subpackages__"],
)
