load("@bazel_util//exec:rules.bzl", "executable_symlink")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell_extra//shell:rules.bzl", "sh_binary")

exports_files(
    ["default.md"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "gen",
    data = [
        ":doctoc",
        ":gen_docs_data",
    ],
    main = "gen.sh",
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "gen_docs_data",
    srcs = [":docs"],
)

pkg_tar(
    name = "docs",
    srcs = [
        "//angular/doc",
        "//commonjs/doc",
        "//eslint/doc",
        "//javascript/doc",
        "//jest/doc",
        "//nodejs/doc",
        "//npm/doc",
        "//openapi/doc",
        "//prettier/doc",
        "//protobuf/doc",
        "//protobufjs/doc",
        "//rollup/doc",
        "//ts-proto/doc",
        "//typescript-eslint/doc",
        "//typescript/doc",
        "//webpack/doc",
    ],
    mode = "0644",
)

executable_symlink(
    name = "doctoc",
    target = "@npm//.bin/doctoc:node",
)
