filegroup(
    name = "buildifier_files",
    srcs = glob(["files/**/*.bazel", "files/**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "eslint_files",
    srcs = glob([
        "files/**/*.js",
        "files/**/*.mjs",
        "files/**/*.mts",
        "files/**/*.ts",
    ], ["files/**/dist/**", "files/webpack/load-config/src/index.mts"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "prettier_files",
    srcs = glob([
        "files/**/*.html",
        "files/**/*.json",
        "files/**/*.md",
        "files/**/*.yml",
    ], [
        "files/**/dist/**",
        "files/**/npm.json",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "common",
    srcs = glob(["files/**"], ["files/**/docs/**", "files/**/test/**"]) + glob(["files/test/**"]),
    visibility = ["//visibility:public"],
)
