load("@npm//:roots.bzl", NPM_ROOTS = "ROOTS")
load("@rules_shell_extra//shell:rules.bzl", "sh_binary")
load("//javascript:npm.bzl", "js_npm_roots")
load("//nodejs:rules.bzl", "nodejs_install", "nodejs_modules_package")
load("//typescript:rules.bzl", "js_import_ts")

nodejs_install(
    name = "install0",
    src = ":node_modules",
)

sh_binary(
    name = "install",
    data = [":install0"],
    main = "install.sh",
)

nodejs_modules_package(
    name = "node_modules",
    links = [
        "//angular/resource-compiler:root",
        "//bazel/runfiles:root",
        "//bazel/worker:root",
        "//commonjs/package:root",
        "//ibazel/notification:root",
        "//pkg/install-manifest:root",
        "//nodejs/fs-linker:root",
        "//test:root",
        "//tools/typescript:root",
        "//util/argparse:root",
        "//util/cache:root",
        "//util/json:root",
        "//util/util:root",
        "//webpack/config:root",
    ],
    tags = ["no-cache"],
    deps = js_npm_roots("npm", NPM_ROOTS),
)

alias(
    name = "nodejs",
    actual = "//nodejs:nodejs",
    visibility = ["//visibility:public"],
)
