load("@npm//:packages.bzl", NPM_PACKAGES = "PACKAGES")
load("@npm//:roots.bzl", NPM_REPO = "REPO", NPM_ROOTS = "ROOTS")
load("@rules_shell_extra//shell:rules.bzl", "sh_binary")
load("//bin:npm.bzl", "bin_npm_binaries")
load("//nodejs:rules.bzl", "nodejs_install", "nodejs_modules_package")
load("//typescript:npm.bzl", "ts_node_modules")
load("//typescript:rules.bzl", "js_import_ts")

nodejs_install(
    name = "install0",
    src = ":node_modules",
)

sh_binary(
    name = "install",
    data = [":install0"],
    main = "install.sh",
)

nodejs_modules_package(
    name = "node_modules",
    bins = bin_npm_binaries(NPM_PACKAGES),
    links = [
        "//angular/resource-compiler:root",
        "//commonjs/package:root",
        "//ibazel/notification:root",
        "//javascript/runfiles:root",
        "//nodejs/fs-linker:root",
        "//nodejs/runfiles:root",
        "//nodejs/worker:root",
        "//pkg/install-manifest:root",
        "//test:root",
        "//tools/typescript:root",
        "//util/argparse:root",
        "//util/cache:root",
        "//util/json:root",
        "//util/util:root",
        "//webpack/config:root",
    ],
    tags = ["no-cache"],
    deps = ts_node_modules(NPM_REPO, NPM_ROOTS),
)

alias(
    name = "nodejs",
    actual = "//nodejs:nodejs",
    visibility = ["//visibility:public"],
)
