yarn = use_extension("//npm:extensions.bzl", "yarn")
yarn.workspace(
    name = "rules_javascript_npm",
    data = "//tools/npm:npm.json",
    path = "/",
    plugins = [
        "//bin:npm_plugin.bzl",
        "//commonjs:npm_plugin.bzl",
        "//nodejs:npm_plugin.bzl",
        "//typescript:npm_plugin.bzl",
    ],
)
use_repo(yarn, npm = "rules_javascript_npm")
