load("@rules_shell//shell:sh_test.bzl", "sh_test")

filegroup(
    name = "bazel",
    srcs = glob(["bazel/**/*"]),
)

sh_test(
    name = "basic",
    size = "large",
    srcs = ["test_basic.sh"],
    data =
        [
            ":bazel",
            "@files//:common",
        ],
    tags = ["local"],
)

test_suite(
    name = "test",
)
